# rust_http_demo

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
.devcontainer/: Dockerfile  devcontainer.json
migrations/2025-03-26-152314_create_shortlinks/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  models.rs  schema.rs  state.rs
src/handlers/: config.rs  metrics.rs  mod.rs  shortlink.rs
tests/: test_shortlink.rs
