[package]
name = "rust_http_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
listenfd = "1.0.1"
sha2 = "0.10.8"
base62 = "2.2.1"
lazy_static = "1.5.0"
diesel = { version = "2.2.8", features = ["postgres", "chrono"] }
