[package]
name = "rust_http_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
base62 = "2.2.1"
chrono = "0.4.40"
diesel = { version = "2.2.8", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
listenfd = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
